--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@ionic/storage": "2.2.0",
         "@ngx-translate/core": "^12.1.2",
         "@ngx-translate/http-loader": "^4.0.0",
+        "@types/hammerjs": "^2.0.41",
         "angularfire2": "^5.4.2",
         "com-sarriaroman-photoviewer": "^1.2.4",
         "compare-func": "^1.3.2",
@@ -55,9 +56,11 @@
         "cordova-plugin-whitelist": "^1.3.4",
         "emulate": "1.0.2",
         "firebase": "^7.24.0",
+        "hammerjs": "^2.0.8",
         "iamport-cordova": "^0.9.3",
         "ionic": "^4.10.1",
         "ionic-angular": "3.9.9",
+        "ionic-long-press": "^2.0.3",
         "ionic3-star-rating": "^2.1.2",
         "ionicons": "3.0.0",
         "jquery": "^3.4.1",
