--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@ngx-translate/core": "^12.1.2",
         "@ngx-translate/http-loader": "^4.0.0",
         "@types/hammerjs": "^2.0.41",
+        "angular-svg-round-progressbar": "6.0.0",
         "angularfire2": "^5.4.2",
         "com-sarriaroman-photoviewer": "^1.2.4",
         "compare-func": "^1.3.2",
