--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "cordova-android": "8.1.0",
         "cordova-ios": "^5.1.1",
         "cordova-plugin-app-version": "^0.1.9",
+        "cordova-plugin-ble-central": "1.6.1",
         "cordova-plugin-camera": "^4.1.0",
         "cordova-plugin-datepicker": "^0.9.3",
         "cordova-plugin-device": "^2.0.3",
@@ -76,7 +77,7 @@
         "zone.js": "0.8.29"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "^3.1.4",
+        "@ionic/app-scripts": "3.2.4",
         "typescript": "^3.8.3"
     },
     "description": "An Ionic project",
