--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "@angular/compiler-cli": "5.2.11",
         "@angular/core": "5.2.11",
         "@angular/forms": "5.2.11",
-        "@angular/http": "^7.2.16",
+        "@angular/http": "5.2.11",
         "@angular/platform-browser": "5.2.11",
         "@angular/platform-browser-dynamic": "5.2.11",
         "@ionic-native/app-version": "^5.23.0",
