--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@ionic-native/splash-screen": "^5.22.0",
         "@ionic-native/status-bar": "^5.22.0",
         "@ionic-native/unique-device-id": "^5.24.0",
+        "@ionic/angular": "^7.0.12",
         "@ionic/storage": "2.2.0",
         "@ngx-translate/core": "^12.1.2",
         "@ngx-translate/http-loader": "^4.0.0",
@@ -71,6 +72,7 @@
         "rxjs-compat": "^6.0.0",
         "setimmediate": "^1.0.5",
         "sw-toolbox": "3.6.0",
+        "swiper": "^9.4.0",
         "whatwg-fetch": "^3.0.0",
         "y": "0.3.2",
         "zone.js": "0.8.29"
