--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "setimmediate": "^1.0.5",
         "sw-toolbox": "3.6.0",
         "swiper": "^9.4.0",
+        "tslint": "^6.1.3",
         "whatwg-fetch": "^3.0.0",
         "y": "0.3.2",
         "zone.js": "0.8.29"
