--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
         "@ionic-native/geolocation": "^5.24.0",
         "@ionic-native/http": "^5.36.0",
         "@ionic-native/iamport-cordova": "^5.23.0",
-        "@ionic-native/image-picker": "^5.36.0",
         "@ionic-native/in-app-browser": "^5.22.0",
         "@ionic-native/keyboard": "^5.24.0",
         "@ionic-native/photo-viewer": "^5.23.0",
@@ -45,7 +44,7 @@
         "com-sarriaroman-photoviewer": "^1.2.4",
         "compare-func": "^1.3.2",
         "cordova": "^9.0.0",
-        "cordova-android": "8.1.0",
+        "cordova-android": "10.1.2",
         "cordova-ios": "5.1.1",
         "cordova-plugin-advanced-http": "3.3.1",
         "cordova-plugin-app-version": "^0.1.9",
@@ -60,7 +59,6 @@
         "cordova-plugin-splashscreen": "^5.0.3",
         "cordova-plugin-statusbar": "^2.4.3",
         "cordova-plugin-uniquedeviceid": "^1.3.2",
-        "cordova-plugin-whitelist": "^1.3.4",
         "emulate": "1.0.2",
         "firebase": "^7.24.0",
         "hammerjs": "^2.0.8",
@@ -75,6 +73,7 @@
         "rxjs": "^6.0.0",
         "rxjs-compat": "^6.0.0",
         "setimmediate": "^1.0.5",
+        "sockjs-client": "^1.6.1",
         "sw-toolbox": "3.6.0",
         "swiper": "^9.4.0",
         "tslint": "^6.1.3",
@@ -85,12 +84,13 @@
     "devDependencies": {
         "@ionic/app-scripts": "3.2.4",
         "@types/hammerjs": "^2.0.41",
+        "cordova-plugin-androidx": "^3.0.0",
+        "cordova-plugin-androidx-adapter": "^1.1.3",
         "typescript": "^3.8.3"
     },
     "description": "An Ionic project",
     "cordova": {
         "plugins": {
-            "cordova-plugin-whitelist": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
@@ -110,11 +110,13 @@
             "cordova-plugin-advanced-http": {
                 "ANDROIDBLACKLISTSECURESOCKETPROTOCOLS": "SSLv3,TLSv1"
             },
-            "cordova-plugin-file": {}
+            "cordova-plugin-file": {},
+            "cordova-plugin-androidx": {},
+            "cordova-plugin-androidx-adapter": {}
         },
         "platforms": [
-            "android",
-            "ios"
+            "ios",
+            "android"
         ]
     }
 }
