--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
         "rxjs": "^6.0.0",
         "rxjs-compat": "^6.0.0",
         "setimmediate": "^1.0.5",
-        "sockjs-client": "^1.6.1",
+        "sockjs-client": "^1.1.4",
+        "stompjs": "^2.3.3",
         "sw-toolbox": "3.6.0",
         "swiper": "^9.4.0",
         "tslint": "^6.1.3",
