--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "compare-func": "^1.3.2",
         "cordova": "^9.0.0",
         "cordova-android": "10.1.2",
+        "cordova-browser": "6.0.0",
         "cordova-ios": "5.1.1",
         "cordova-plugin-advanced-http": "3.3.1",
         "cordova-plugin-app-version": "^0.1.9",
@@ -70,6 +71,7 @@
         "ionicons": "3.0.0",
         "jquery": "^3.4.1",
         "natives": "^1.1.6",
+        "ngx-socket-io": "^4.5.1",
         "rxjs": "^6.0.0",
         "rxjs-compat": "^6.0.0",
         "setimmediate": "^1.0.5",
@@ -117,7 +119,8 @@
         },
         "platforms": [
             "ios",
-            "android"
+            "android",
+            "browser"
         ]
     }
 }
