로그인에 임시로 결제관련 코드 추가
로그인에 임시로 결제관련 코드 추가
메이드 / 초이스 관련 코드 추가 및 실시간 적용되게 수정.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@ionic/storage": "2.2.0",
         "@ngx-translate/core": "^12.1.2",
         "@ngx-translate/http-loader": "^4.0.0",
+        "@portone/browser-sdk": "0.0.2",
         "angular-svg-round-progressbar": "6.0.0",
         "angularfire2": "^5.4.2",
         "com-sarriaroman-photoviewer": "^1.2.4",
